<resources>
    <string name="app_name">WeddingManager</string>
    <string name="menu_diary_wedding">Diary wedding</string>
    <string name="menu_saving_book">Saving Book</string>
    <string name="menu_statistical">Statistical</string>
    <string name="custom">Tùy chọn</string>
    <string name="total_income">Tổng thu nhập :</string>
    <string name="total_costs">Tổng chi :</string>
    <string name="cir_current_month">CIR tháng này (%) :</string>
    <string name="cir_last_month">CIR tháng trước (%) :</string>
    <string name="shopping">Mua sắm</string>
    <string name="spend_the_most">Khoản chi chủ yếu :</string>
    <string name="status">Trạng thái :</string>
    <string name="party_date_start">Ngày diễn ra :</string>
    <string name="account">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>


    <string name="facebook_app_id">2617619828301876</string> <string name="fb_login_protocol_scheme">fb2617619828301876</string>
    <string name="registration_party">Registration Party</string>
    <string name="logout">Đăng xuất</string>
    <string name="name_party">Tên sự kiện</string>
    <string name="type_party">Loai :</string>
    <string name="cost">Chi phí :</string>
    <string name="owner_party">Người mời tham dự :</string>
    <string name="cost_type">Hình thức :</string>
    <string name="note_party">Ghi chú :</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
</resources>
