<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/menu_saving_book"
        android:textColor="@color/colorPurple"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:padding="@dimen/dp_5"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/total_income" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/total_costs" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/cir_current_month" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/cir_last_month" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/spend_the_most" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:padding="@dimen/dp_5"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorMoneyNomal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="5.000.000 vnđ" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorMoneyLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="4.000.000 vnđ" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="0 %" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="0 %" />
            <TextView
                android:padding="@dimen/dp_5"
                android:textStyle="bold"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/colorPurple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/shopping" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>