<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="InefficientWeight,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/menu_diary_wedding"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/sp_30"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_party"
                android:layout_marginBottom="@dimen/dp_5"
                android:textSize="@dimen/sp_18" />

            <EditText
                android:background="@drawable/bg_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginBottom="@dimen/dp_5"
                android:textSize="@dimen/sp_18" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>