<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemParty"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/itemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutView"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_10"
        android:visibility="visible"
        tools:ignore="RtlSymmetry">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_party"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/cost"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/cost_type"
                    android:textSize="@dimen/sp_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_20"
                android:paddingLeft="@dimen/dp_20">

                <TextView
                    android:id="@+id/tvOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/tvCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/cost"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/cost"
                    android:textSize="@dimen/sp_18" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/dp_5"
            android:textSize="@dimen/sp_18"
            android:id="@+id/tvNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layoutView"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgPartyType"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:padding="@dimen/dp_10"
        android:src="@drawable/confetti" />

    <TextView
        android:id="@+id/tvPartyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:layout_toStartOf="@id/imgExpandMore"
        android:layout_toLeftOf="@id/imgExpandMore"
        android:layout_toEndOf="@+id/imgPartyType"
        android:layout_toRightOf="@+id/imgPartyType"
        android:textColor="@color/colorPurple"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ViewPartyStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPartyName"
        android:layout_margin="@dimen/dp_5"
        android:layout_toEndOf="@+id/imgPartyType"
        android:layout_toRightOf="@+id/imgPartyType"
        android:text="@string/status"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tvPartyStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPartyName"
        android:layout_margin="@dimen/dp_5"
        android:layout_toStartOf="@id/imgExpandMore"
        android:layout_toLeftOf="@id/imgExpandMore"
        android:layout_toEndOf="@+id/ViewPartyStatus"
        android:layout_toRightOf="@+id/ViewPartyStatus"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/ViewPartyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPartyStatus"
        android:layout_margin="@dimen/dp_5"
        android:layout_toEndOf="@id/imgPartyType"
        android:layout_toRightOf="@id/imgPartyType"
        android:text="@string/party_date_start"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tvPartyDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPartyStatus"
        android:layout_margin="@dimen/dp_5"
        android:layout_toStartOf="@id/imgExpandMore"
        android:layout_toLeftOf="@id/imgExpandMore"
        android:layout_toEndOf="@id/ViewPartyDate"
        android:layout_toRightOf="@id/ViewPartyDate"
        android:textSize="@dimen/sp_14" />

    <ImageView
        android:id="@+id/imgExpandMore"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_100"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_expand_more" />
    </RelativeLayout>

</RelativeLayout>