<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_margin="@dimen/dimen_10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/btnDiaryWedding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            tools:ignore="NestedWeights">
            <ImageView
                android:layout_weight="1"
                android:src="@drawable/ic_diary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                android:textColor="@color/colorPurple"
                android:gravity="center"
                android:text="@string/menu_diary_wedding"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSavingBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <ImageView
                android:layout_weight="1"
                android:src="@drawable/ic_saving_book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                android:textColor="@color/colorPurple"
                android:gravity="center"
                android:text="@string/menu_saving_book"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnStatistical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <ImageView
                android:layout_weight="1"
                android:src="@drawable/ic_statistical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                android:textColor="@color/colorPurple"
                android:gravity="center"
                android:text="@string/menu_statistical"
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>